First Online Publish

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Personal - Start Bootstrap Theme</title>
+        <title>Christian Crank|Software Engineer & Game Dev - Home Page</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -26,10 +26,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -188,12 +188,12 @@
                                     Growing up, a big part of my life revolved around gaming with my brother on the Nintendo 64 and Original Xbox consoles. This passion stuck with me as I grew older and evolved into PC building and gaming, eventually influencing my career path. I studied and obtained my Bachelors Degree in Computer Game Design & Development at Kennesaw State University, which I really enjoyed, especially turning code into fun, interactive stuff.
                                     <br>
                                     <br>
-                                    I've built some games and small apps that you can check out here on my website—they're a testament to my ongoing enthusiasm for this field. When I'm not coding, you'll often find me outdoors hiking, kayaking, or fishing. I love diving into the complexities of computers, but I think it's important to balance that with time spent in nature. You can check out my other links below.
+                                    I've built some games and small apps that you can check out here on my website—they're a testament to my ongoing enthusiasm for this field. When I'm not coding, you'll often find me outdoors hiking, kayaking, or fishing. I love diving into the complexities of computers, but I think it's important to balance that with time spent in nature. You can check out my other links below!
                                 </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!--<a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>-->
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/christian-crank-3a9bb3165"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://github.com/ChristianCrank"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
