--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Personal - Start Bootstrap Template</title>
+        <title>Christian Crank|Software Engineer & Game Dev - Resume</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -26,10 +26,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -127,8 +127,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>My time at Kennesaw State University was heavily focused on learning software engineering practices such as Agile and Scrum, getting experienced with IDE's, and refining my skills in programming languages such as C++, C#, and Java. 
-                                            Another large focus was making games, both through design techniques and development practices. We primarily used Unity and C# to develop many projects which are showcased here on my site. Other experience through KSU includes JavaScript, CSS, and HTML web design, AI and Data Structure work, VR and AR game development, and 3D modeling/animation. </div></div>
+                                        <div class="col-lg-8"><div>My time at Kennesaw State University was heavily focused on learning software engineering practices such as Agile and Scrum, getting experienced with IDE's, and refining my skills in OO programming languages such as C++, C#, and Java. 
+                                            Another large focus was making games, both through design techniques and development practices. We primarily used Unity and C# to develop many projects which are showcased here on my site. Other experience through KSU includes JavaScript, CSS, and HTML web design, AI and Data Structure work, VR and AR game development, software testing, and 3D modeling/animation. </div></div>
                                     </div>
                                 </div>
                             </div>
@@ -197,8 +197,8 @@
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">AR/VR Game Development</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Scrum and Agile Practices</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Data Modeling and Simulation</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Scrum and Agile</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Data Structures/Data Modeling and Simulation</div></div>
                                         </div>
                                         <br>
                                         <div class="row row-cols-1 row-cols-md-3">
