--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>Christian Crank|Software Engineer & Game Dev - Projects</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -22,14 +22,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Start Bootstrap</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Christian Crank</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -44,25 +44,45 @@
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
+                                <div class="card-body p-2">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">CyberballVR</h2>
+                                            <p>CyberballVR was a Unity VR game I developed while working with a professor at Florida State University for psychology research. The game is a catch and throw style game played in VR and serves as a key research tool in understanding social dynamics through the gameplay. Furthermore, the game is meant to simulate an online experience and is set up to trick the player into thinking they are playing against real players.
+                                                <br> The goal was to create a simple game that can easily be picked up by anyone, but has the ability to be heavily modified by the researcher. This includes everything from ball velocity, who throws to who, and appearance of all AI players. Every modification the researcher can make is done through a separate application I built, which ultimately gives in-game control without the player's ability to access it. 
+                                                <br> Take a look at the video for a full explanation!
+                                            </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <iframe width="800" height="315" src="https://www.youtube.com/embed/b1PiYP96sh0?si=TM7d0xD_6rZ4WovT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                        
                                     </div>
                                 </div>
                             </div>
                             <!-- Project Card 2-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">The Cycle</h2>
+                                            <p>The Cycle was another Unity game that I developed and was built for PC play with a keyboard and mouse. The goal was to create a game that demonstrates negative reinforcement through the gameplay mechanics in relation to addiction abuse. The game follows a player named Little Tim who lives a normal life but is plagued with addictions in order to "manage" stress. 
+                                               <br> Unfortunately as the story goes, the player's mother got in in accident and has a hospital bill that must be payed off. It is up to the player to work efficiently enough while maintaing their addictions throughout the 7-day week in order to pay off their mother's hospital bill. 
+                                               <br> Because the game is a take on a person's addictions, the player will be able to indulge in food, cigarettes, and alcohol as a way to reduce stress and increase work efficiency. However, they will soon find the negatives to these vices, emphasized through harsh gameplay mechanics/drawbacks, and realize they were probably better off without them in the first place. </p>
+                                        </div>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Xc7OLpLKg-o?si=7Y0tPbQh4Bn3mtWR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 3-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Strappy Bird/Flappy Gun</h2>
+                                            <p>This game never had a working title but was one of the first games I completed in Unity for PC play. This game was made in an Interaction in Games course, so the premise was to take an existing game and add new modalities of interaction through the game mechanics. 
+                                               <br> I achieved the goal by taking a well known game, Flappy Bird, and adding a challenging twist through powerup guns that must be used to break through the pipes and destroy enemies in the way. The game still features a score system that increments by going through a pipe, but the player must now manage their powerups and choose the best ones for the situatiuon.
+                                                <br> The game also features a shop which can be accessed at any time. The shop allows the player to buy upgrades for the weapons and powerups via the coins gained by playing. </p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qJe09UEUrAU?si=yqPTpP25IzmLP4Sz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -80,21 +100,6 @@
                 </div>
             </section>
         </main>
-        <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
