--- a/resume.html
+++ b/resume.html
@@ -58,15 +58,17 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2016 - Present</div>
-                                                <div class="small fw-bolder">Computer Assembly Expert</div>
-                                                <div class="small text-muted">Self Employed</div>
+                                                <div class="text-primary fw-bolder mb-2">2025 - Present</div>
+                                                <div class="small fw-bolder">Technical Write, Game Designer, 3D Scanner, QA </div>
+                                                <div class="small text-muted">Skillmaker.ai</div>
                                                 <div class="small text-muted">Marietta, GA</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>I specialize in creating custom-built PCs tailored to each client's needs, ensuring
-                                            performance and reliability. My services include component consultation and
-                                            selection, precise assembly, and ongoing troubleshooting support.</div></div>
+                                        <div class="col-lg-8"><div>Bridge film production and game development teams to accelerate the integration of automotive assets into Unreal Engine, while optimizing educational content design for VR training modules.
+
+                                            - Streamlined Asset Pipeline: Drove efficiency by generating and refining high-accuracy 3D automotive models/scans, ensuring seamless implementation into Unreal Engine and reducing developer rework. 
+                                            - Learning-Centric Narrative Design: Develop cognitively optimized lesson scripts to enhance film crew production quality and learning retention, aligning content with pedagogical best practices. 
+                                            - Quality Assurance & Engagement: Design gameplay test scenarios grounded in game design theory to validate developer workflows, while co-testing VR mechanics to uphold immersive, educationally effective user experiences.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -127,8 +129,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>My time at Kennesaw State University was heavily focused on learning software engineering practices such as Agile and Scrum, getting experienced with IDE's, and refining my skills in OO programming languages such as C++, C#, and Java. 
-                                            Another large focus was making games, both through design techniques and development practices. We primarily used Unity and C# to develop many projects which are showcased here on my site. Other experience through KSU includes JavaScript, CSS, and HTML web design, AI and Data Structure work, VR and AR game development, software testing, and 3D modeling/animation. </div></div>
+                                        <div class="col-lg-8"><div>During my time at Kennesaw State, I focused a lot on learning real-world software engineering practices like Agile and Scrum, getting comfortable with IDEs, and sharpening my object-oriented programming skills in C++, C#, and Java. A big part of my coursework centered around game development, both the design side and hands-on coding. Most of the projects you'll see here were built in Unity using C#.
+
+                                            I also gained experience with front-end web development using JavaScript, HTML, and CSS, as well as working with AI, data structures, VR/AR game projects, software testing, and some 3D modeling and animation. </div></div>
                                     </div>
                                 </div>
                             </div>
