--- a/resume.html
+++ b/resume.html
@@ -66,9 +66,9 @@
                                         </div>
                                         <div class="col-lg-8"><div>Bridge film production and game development teams to accelerate the integration of automotive assets into Unreal Engine, while optimizing educational content design for VR training modules.
 
-                                            - Streamlined Asset Pipeline: Drove efficiency by generating and refining high-accuracy 3D automotive models/scans, ensuring seamless implementation into Unreal Engine and reducing developer rework. 
-                                            - Learning-Centric Narrative Design: Develop cognitively optimized lesson scripts to enhance film crew production quality and learning retention, aligning content with pedagogical best practices. 
-                                            - Quality Assurance & Engagement: Design gameplay test scenarios grounded in game design theory to validate developer workflows, while co-testing VR mechanics to uphold immersive, educationally effective user experiences.</div></div>
+                                        </br>  - Streamlined Asset Pipeline: Drove efficiency by generating and refining high-accuracy 3D automotive models/scans, ensuring seamless implementation into Unreal Engine and reducing developer rework. 
+                                        </br>  - Learning-Centric Narrative Design: Develop cognitively optimized lesson scripts to enhance film crew production quality and learning retention, aligning content with pedagogical best practices. 
+                                        </br>  - Quality Assurance & Engagement: Design gameplay test scenarios grounded in game design theory to validate developer workflows, while co-testing VR mechanics to uphold immersive, educationally effective user experiences.</div></div>
                                     </div>
                                 </div>
                             </div>
