--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
                             <!-- Project Card 1-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-2">
+                                <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">CyberballVR</h2>
@@ -53,7 +53,7 @@
                                                 <br> Take a look at the video for a full explanation!
                                             </p>
                                         </div>
-                                        <iframe width="800" height="315" src="https://www.youtube.com/embed/b1PiYP96sh0?si=TM7d0xD_6rZ4WovT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/b1PiYP96sh0?si=TM7d0xD_6rZ4WovT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                         
                                     </div>
                                 </div>
@@ -68,7 +68,7 @@
                                                <br> Unfortunately as the story goes, the player's mother got in an accident and has a hospital bill that must be payed off. It is up to the player to work efficiently enough while maintaing their addictions throughout the 7-day week in order to pay off their mother's hospital bill. 
                                                <br> Because the game is a take on a person's addictions, the player will be able to indulge in food, cigarettes, and alcohol as a way to reduce stress and increase work efficiency. However, they will soon find the negatives to these vices, emphasized through harsh gameplay mechanics/drawbacks, and realize they were probably better off without them in the first place. </p>
                                         </div>
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Xc7OLpLKg-o?si=7Y0tPbQh4Bn3mtWR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Xc7OLpLKg-o?si=7Y0tPbQh4Bn3mtWR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -82,7 +82,7 @@
                                                <br> I achieved the goal by taking a well known game, Flappy Bird, and adding a challenging twist through powerup guns that must be used to break through the pipes and destroy enemies in the way. The game still features a score system that increments by going through a pipe, but the player must now manage their powerups and choose the best ones for the situatiuon.
                                                 <br> The game also features a shop which can be accessed at any time. The shop allows the player to buy upgrades for the weapons and powerups via the coins gained by playing. </p>
                                         </div>
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qJe09UEUrAU?si=yqPTpP25IzmLP4Sz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/qJe09UEUrAU?si=yqPTpP25IzmLP4Sz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
